src/Editor/LibreLancer.ImUI/ImPlot/ImPlotNative.cs


    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S64PtrInt(byte* label_id,long* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U64PtrInt(byte* label_id,ulong* values,int count,double yreference,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_FloatPtrFloatPtrInt(byte* label_id,float* xs,float* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_doublePtrdoublePtrInt(byte* label_id,double* xs,double* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S16PtrS16PtrInt(byte* label_id,short* xs,short* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U16PtrU16PtrInt(byte* label_id,ushort* xs,ushort* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S32PtrS32PtrInt(byte* label_id,int* xs,int* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U32PtrU32PtrInt(byte* label_id,uint* xs,uint* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S64PtrS64PtrInt(byte* label_id,long* xs,long* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U64PtrU64PtrInt(byte* label_id,ulong* xs,ulong* ys,int count,double yreference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_FloatPtrFloatPtrFloatPtr(byte* label_id,float* xs,float* ys1,float* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_doublePtrdoublePtrdoublePtr(byte* label_id,double* xs,double* ys1,double* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S16PtrS16PtrS16Ptr(byte* label_id,short* xs,short* ys1,short* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U16PtrU16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys1,ushort* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S32PtrS32PtrS32Ptr(byte* label_id,int* xs,int* ys1,int* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U32PtrU32PtrU32Ptr(byte* label_id,uint* xs,uint* ys1,uint* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_S64PtrS64PtrS64Ptr(byte* label_id,long* xs,long* ys1,long* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShaded_U64PtrU64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys1,ulong* ys2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotShadedG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter1,void* data1,delegate* unmanaged<int, void*, ImPlotPoint> getter2,void* data2,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_FloatPtrInt(byte* label_id,float* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_doublePtrInt(byte* label_id,double* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S16PtrInt(byte* label_id,short* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U16PtrInt(byte* label_id,ushort* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S32PtrInt(byte* label_id,int* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U32PtrInt(byte* label_id,uint* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S64PtrInt(byte* label_id,long* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U64PtrInt(byte* label_id,ulong* values,int count,double xscale,double xstart,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_FloatPtrFloatPtr(byte* label_id,float* xs,float* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_doublePtrdoublePtr(byte* label_id,double* xs,double* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S16PtrS16Ptr(byte* label_id,short* xs,short* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S32PtrS32Ptr(byte* label_id,int* xs,int* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_S64PtrS64Ptr(byte* label_id,long* xs,long* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairs_U64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStairsG(byte* label_id,delegate* unmanaged<int, void*, ImPlotPoint> getter,void* data,int count,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_FloatPtrInt(byte* label_id,float* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_doublePtrInt(byte* label_id,double* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S16PtrInt(byte* label_id,short* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U16PtrInt(byte* label_id,ushort* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S32PtrInt(byte* label_id,int* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U32PtrInt(byte* label_id,uint* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S64PtrInt(byte* label_id,long* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U64PtrInt(byte* label_id,ulong* values,int count,double reference,double scale,double start,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_FloatPtrFloatPtr(byte* label_id,float* xs,float* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_doublePtrdoublePtr(byte* label_id,double* xs,double* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S16PtrS16Ptr(byte* label_id,short* xs,short* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U16PtrU16Ptr(byte* label_id,ushort* xs,ushort* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S32PtrS32Ptr(byte* label_id,int* xs,int* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U32PtrU32Ptr(byte* label_id,uint* xs,uint* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_S64PtrS64Ptr(byte* label_id,long* xs,long* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotStems_U64PtrU64Ptr(byte* label_id,ulong* xs,ulong* ys,int count,double reference,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern void ImPlot_PlotText(byte* text,double x,double y,Vector2 pix_offset,ImPlotSpec spec);

    [DllImport("cimgui")]
    public static extern Vector2 ImPlot_PlotToPixels_PlotPoint(ImPlotPoint plt,ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern Vector2 ImPlot_PlotToPixels_double(double x,double y,ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern void ImPlot_PopColormap(int count);

    [DllImport("cimgui")]
    public static extern void ImPlot_PopPlotClipRect();

    [DllImport("cimgui")]
    public static extern void ImPlot_PopStyleColor(int count);

    [DllImport("cimgui")]
    public static extern void ImPlot_PopStyleVar(int count);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushColormap_PlotColormap(ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushColormap_Str(byte* name);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushPlotClipRect(float expand);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushStyleColor_U32(ImPlotCol idx,uint col);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushStyleColor_Vec4(ImPlotCol idx,Vector4 col);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushStyleVar_Float(ImPlotStyleVar idx,float val);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushStyleVar_Int(ImPlotStyleVar idx,int val);

    [DllImport("cimgui")]
    public static extern void ImPlot_PushStyleVar_Vec2(ImPlotStyleVar idx,Vector2 val);

    [DllImport("cimgui")]
    public static extern Vector4 ImPlot_SampleColormap(float t,ImPlotColormap cmap);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetAxes(ImAxis x_axis,ImAxis y_axis);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetAxis(ImAxis axis);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetCurrentContext(IntPtr ctx);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetImGuiContext(IntPtr ctx);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetNextAxesLimits(double x_min,double x_max,double y_min,double y_max,ImPlotCond cond);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetNextAxesToFit();

    [DllImport("cimgui")]
    public static extern void ImPlot_SetNextAxisLimits(ImAxis axis,double v_min,double v_max,ImPlotCond cond);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetNextAxisLinks(ImAxis axis,double* link_min,double* link_max);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetNextAxisToFit(ImAxis axis);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxes(byte* x_label,byte* y_label,ImPlotAxisFlags x_flags,ImPlotAxisFlags y_flags);

    [DllImport("cimgui")]
    public static extern void ImPlot_SetupAxesLimits(double x_min,double x_max,double y_min,double y_max,ImPlotCond cond);
